# mp3blaster

./: .gitignore  AUTHORS  BUGS  CHANGES  CREDITS  ChangeLog  DEVELOP  FAQ  FILES  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acconfig.h  aclocal.m4  autogen.sh  clean  clean.sh  config.h.in  config.status  config_file.txt  configure  configure.ac  configure.in  convlist  debug.cc  fileman.cc  gstack.cc  idea.txt  main.cc  mp3_specs.txt  mp3blaster.1  mp3blaster.h  mp3blaster.list  mp3blaster.lsm  mp3blaster.spec  (+25 more)
doc/: Makefile.am  Makefile.in  coding_style_guide.html  coding_style_guide.txt  commands.txt  mp3blasterrc  sample.mp3blasterrc  sample.mp3blasterrc_for_x
doc/charmap/: Makefile.am  Makefile.in  README  chargen.c  makefile  maketbl.c  win1251  win2koi.tbl
id3scripts/: id3name.sh
include/: mpegsound.h
mpegsound/: AUTHORS  CHANGES  Makefile  Makefile.am  Makefile.in  bitwindow.cc  cyclicbuffer.cc  cyclicbuffer.h  esdplayer.cc  fileinput.cc  fileplayer.cc  filter.cc  filter_2.cc  httpinput.cc  huffmantable.cc  mikmod.h  mikmodplayer.cc  mpeglayer1.cc  mpeglayer2.cc  mpeglayer3.cc  mpegsound.h  mpegsound.h.orig  mpegsound_locals.h  mpegtable.cc  mpegtoraw.cc  mpegtoraw.cc.orig  nasplayer.cc  oggplayer.cc  rawplayer.cc  rawtofile.cc  sdlplayer.cc  sidplayer.cc  soundinputstream.cc  soundplayer.cc  wavetoraw.cc  xingheader.cc  xingheader.h
nmixer/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  getopt.c  getopt1.c  main.cc  mixers.cc  nasmixer.cc  nmixer.c.org  nmixer.cc  nmixer.h  nmixer.lsm  nullmixer.cc  ossmixer.cc
python/: Makefile.am  glue.cc
src/: FILES  Makefile  Makefile.am  Makefile.in  TODO  config.cc  configfile.cc  configfile.h  debug.cc  exceptions.h  fileman.cc  fileman.h  genretab.h  getinput.cc  getinput.h  getopt.c  getopt1.c  global.cc  global.h  gstack.cc  gstack.h  history.cc  history.h  id3parse.cc  id3parse.h  interface.cc  interface.h  keybindings.h  main.cc  main.cc.fout  main.cc.orig  mp3blaster.h  mp3item.cc  mp3item.h  mp3play.cc  mp3play.h  mp3player.cc  mp3player.h  mp3stack.cc  mp3stack.h  (+15 more)
winnt/: AUTHORS  README.txt  getopt.c  getopt.h  id3parse.cpp  id3parse.h  mp3tag.cpp  mp3tag.mak
