SUBDIRS = mpegsound nmixer src
man_MANS = mp3blaster.1 nmixer.1
EXTRA_DIST = CREDITS TODO id3scripts/id3name.sh idea.txt mp3_specs.txt \
	mp3blaster.1 mp3blaster.lsm nmixer.1 mp3idea.txt mp3idea2.txt \
	weird_header1 weird_header2 test.c winnt/AUTHORS winnt/README.txt \
	winnt/getopt.c winnt/getopt.h winnt/id3parse.cpp winnt/id3parse.h \
	winnt/mp3tag.cpp winnt/mp3tag.mak autogen.sh
