SUBDIRS = mpegsound nmixer src doc
man_MANS = mp3blaster.1 nmixer.1 splay.1
EXTRA_DIST = CREDITS TODO FAQ id3scripts/id3name.sh mp3blaster.1 nmixer.1 \
	winnt/AUTHORS winnt/README.txt winnt/getopt.c winnt/getopt.h \
	winnt/id3parse.cpp winnt/id3parse.h winnt/mp3tag.cpp winnt/mp3tag.mak \
	BUGS splay.1 mp3blaster.list
