pkgdata_DATA = commands.txt sample.mp3blasterrc charmap/makefile charmap/README charmap/chargen.c charmap/koi8-r charmap/maketbl.c charmap/win1251 charmap/win2koi.tbl
EXTRA_DIST = commands.txt sample.mp3blasterrc charmap/makefile charmap/README charmap/chargen.c charmap/koi8-r charmap/maketbl.c charmap/win1251 charmap/win2koi.tbl
